--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 </head>
 <body>
     <!-- Шапка сайта -->
-    <header>
-        <a lang="en" href="">WebStudio</a>
-        <nav>
-            <a href="">Студия</a>
-            <a href="">Портфолио</a>
-            <a href="">Контакты</a>
+    <header class="header">
+        <a class="logo" lang="en" href=""><span class="blue-logo">Web</span>Studio</a>
+        <nav class="site-nav list">
+            <a class="link" href="">Портфолио</a>
+            <a class="link" href="">Контакты</a>
+            <a class="link" href="">Студия</a>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contact-list">
+            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!-- Главный блок -->
     <main>
-        <!--  -->
+        <!-- Герой -->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
