--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <!-- Главный блок -->
     <main>
         <!-- Герой -->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button class="hero-button" type="button">Заказать услугу</button>
         </section>
         <!-- Особенности -->
         <section>
