Главный блок, Герой, Особенности добавил классы и основные цвета

--- a/index.html
+++ b/index.html
@@ -29,30 +29,30 @@
             <button class="hero-button" type="button">Заказать услугу</button>
         </section>
         <!-- Особенности -->
-        <section>
-            <h2>Особенности</h2>
-                <ul>
-                    <li>
+        <section class="section">
+            <h2 class="peculiarities-title">Особенности</h2>
+                <ul class="peculiarities-list">
+                    <li class="title">
                         <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                        <p class="paragraphly">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li>
+                    <li class="title">
                         <h3>Пунктуальность</h3>
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li>
+                    <li class="title">
                         <h3>Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                        <p class="paragraphly">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li>
+                    <li class="title">
                         <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <p class="paragraphly">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
         </section>
         <!-- Чем мы занимаемся -->
-        <section>
-            <h2>Чем мы занимаемся</h2>
+        <section class="section">
+            <h2 class="section-title">Чем мы занимаемся</h2>
             <ul lang="en">
                 <li>
                     <img src="./image/what_are_we_doing/optimiz/developed.jpg" alt="developed" width="370">
@@ -66,8 +66,8 @@
             </ul>
         </section>
         <!-- Наша команда -->
-        <section>
-            <h2>Наша команда</h2>
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
             <ul>
                 <!-- Игорь Демьяненко Product Designer -->
                 <li>
