--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </li>
                     <li class="title">
                         <h3>Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                        <p class="paragraphly">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="title">
                         <h3>Планирование</h3>
