--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
         </section>
     </main>
     <!-- Подвал сайта -->
-    <footer>
-        <a lang="en" href="/">WebStudio</a>
-        <address>
+    <footer class="footer">
+        <a class="logo" lang="en" href=""><span class="blue-logo">Web</span>Studio</a>
+        <address class="address">
             г. Киев, пр-т Леси Украинки, 26
         </address>
-        <address>
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <address class="address-list">
+            <a class="link" href="mailto:info@example.com">info@example.com</a>
+            <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
     </footer>
 </body>
