--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
     <!-- Шапка сайта -->
     <header class="header">
         <a class="logo" lang="en" href=""><span class="blue-logo">Web</span>Studio</a>
         <nav class="site-nav list">
-            <a class="link" href="">Портфолио</a>
+            <a class="link" href="/index.html">Студия</a>
+            <a class="link" href="./portfolio.html">Портфолио</a>
             <a class="link" href="">Контакты</a>
-            <a class="link" href="">Студия</a>
         </nav>
         <ul class="contact-list">
             <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
