Добавляет секцию фильтров

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,18 @@
         </header>
         <!-- Главный блок -->
         <main>
-        
+        <!-- Секция фильтров -->
+            <section>
+                <ul>
+                    <li><button type="button">Все</button></li>
+                    <li><button type="button">Веб-сайты</button></li>
+                    <li><button type="button">Приложения</button></li>
+                    <li><button type="button">Дизайн</button></li>
+                    <li><button type="button">Маркетинг</button></li>
+                </ul>
+            </section>
+        <!-- Секция проэктов -->
+            <section></section>
         </main>
         <!-- Подвал сайта -->
         <footer class="footer">
