Добавляет секцию портфолио с изображениями

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,8 +23,9 @@
         </header>
         <!-- Главный блок -->
         <main>
-        <!-- Секция фильтров -->
+        <!-- Секция портфолио -->
             <section>
+                <h1>Портфолио</h1>
                 <ul>
                     <li><button type="button">Все</button></li>
                     <li><button type="button">Веб-сайты</button></li>
@@ -32,9 +33,54 @@
                     <li><button type="button">Дизайн</button></li>
                     <li><button type="button">Маркетинг</button></li>
                 </ul>
+               <ul>
+                   <li>   
+                    <img src="./image/portfolio/optimiz/project_1.jpg" alt="Веб-сайт">
+                    <h2>Технокряк</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                   <li>   
+                    <img src="./image/portfolio/optimiz/project_2.jpg" alt="Дизайн">
+                    <h2>Постер New Orlean vs Golden Star</h2>
+                    <p>Дизайн</p>
+                </li>
+                   <li>   
+                    <img src="./image/portfolio/optimiz/project_3.jpg" alt="Приложение">
+                    <h2>Ресторан Seafood</h2>
+                    <p>Приложение</p>
+                </li>
+                   <li>   
+                    <img src="./image/portfolio/optimiz/project_4.jpg" alt="Маркетинг">
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                </li>
+                   <li>   
+                    <img src="./image/portfolio/optimiz/project_5.jpg" alt="Приложение">
+                    <h2>Проект Boxes</h2>
+                    <p>Приложение</p>
+                </li>
+                   <li>   
+                    <img src="./image/portfolio/optimiz/project_6.jpg" alt="Веб-сайт">
+                    <h2>Inspiration has no Borders</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                   <li>   
+                    <img src="./image/portfolio/optimiz/project_7.jpg" alt="Дизайн">
+                    <h2>Издание Limited Edition</h2>
+                    <p>Дизайн</p>
+                </li>
+                   <li>   
+                    <img src="./image/portfolio/optimiz/project_8.jpg" alt="Маркетинг">
+                    <h2>Проект LAB</h2>
+                    <p>Маркетинг</p>
+                </li>
+                   <li>   
+                    <img src="./image/portfolio/optimiz/project_9.jpg" alt="Приложение">
+                    <h2>Growing Business</h2>
+                    <p>Приложение</p>
+                </li>
+               </ul> 
             </section>
-        <!-- Секция проэктов -->
-            <section></section>
         </main>
         <!-- Подвал сайта -->
         <footer class="footer">
