--- a/portfolio.html
+++ b/portfolio.html
@@ -33,53 +33,53 @@
                     <li><button type="button">Дизайн</button></li>
                     <li><button type="button">Маркетинг</button></li>
                 </ul>
-               <ul>
+                <ul>
                    <li>   
-                    <img src="./image/portfolio/optimiz/project_1.jpg" alt="Веб-сайт">
+                    <img src="./image/portfolio/optimiz/project_1.jpg" width="370" height="294" alt="Веб-сайт">
                     <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
                 </li>
                    <li>   
-                    <img src="./image/portfolio/optimiz/project_2.jpg" alt="Дизайн">
+                    <img src="./image/portfolio/optimiz/project_2.jpg" width="370" height="294" alt="Дизайн">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
                 </li>
                    <li>   
-                    <img src="./image/portfolio/optimiz/project_3.jpg" alt="Приложение">
+                    <img src="./image/portfolio/optimiz/project_3.jpg" width="370" height="294" alt="Приложение">
                     <h2>Ресторан Seafood</h2>
                     <p>Приложение</p>
                 </li>
                    <li>   
-                    <img src="./image/portfolio/optimiz/project_4.jpg" alt="Маркетинг">
+                    <img src="./image/portfolio/optimiz/project_4.jpg" width="370" height="294" alt="Маркетинг">
                     <h2>Проект Prime</h2>
                     <p>Маркетинг</p>
                 </li>
                    <li>   
-                    <img src="./image/portfolio/optimiz/project_5.jpg" alt="Приложение">
+                    <img src="./image/portfolio/optimiz/project_5.jpg" width="370" height="294" alt="Приложение">
                     <h2>Проект Boxes</h2>
                     <p>Приложение</p>
                 </li>
                    <li>   
-                    <img src="./image/portfolio/optimiz/project_6.jpg" alt="Веб-сайт">
+                    <img src="./image/portfolio/optimiz/project_6.jpg" width="370" height="294" alt="Веб-сайт">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </li>
                    <li>   
-                    <img src="./image/portfolio/optimiz/project_7.jpg" alt="Дизайн">
+                    <img src="./image/portfolio/optimiz/project_7.jpg" width="370" height="294" alt="Дизайн">
                     <h2>Издание Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
                    <li>   
-                    <img src="./image/portfolio/optimiz/project_8.jpg" alt="Маркетинг">
+                    <img src="./image/portfolio/optimiz/project_8.jpg" width="370" height="294" alt="Маркетинг">
                     <h2>Проект LAB</h2>
                     <p>Маркетинг</p>
                 </li>
                    <li>   
-                    <img src="./image/portfolio/optimiz/project_9.jpg" alt="Приложение">
+                    <img src="./image/portfolio/optimiz/project_9.jpg" width="370" height="294" alt="Приложение">
                     <h2>Growing Business</h2>
                     <p>Приложение</p>
                 </li>
-               </ul> 
+                </ul> 
             </section>
         </main>
         <!-- Подвал сайта -->
