--- a/portfolio.html
+++ b/portfolio.html
@@ -34,50 +34,68 @@
                     <li><button type="button">Маркетинг</button></li>
                 </ul>
                 <ul>
-                   <li>   
+                   <li>
+                        <a href="">   
                     <img src="./image/portfolio/optimiz/project_1.jpg" width="370" height="294" alt="Веб-сайт">
                     <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
+                        </a>
                 </li>
-                   <li>   
+                   <li>
+                        <a href="">   
                     <img src="./image/portfolio/optimiz/project_2.jpg" width="370" height="294" alt="Дизайн">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
+                        </a>
                 </li>
-                   <li>   
+                   <li>
+                        <a href="">   
                     <img src="./image/portfolio/optimiz/project_3.jpg" width="370" height="294" alt="Приложение">
                     <h2>Ресторан Seafood</h2>
                     <p>Приложение</p>
+                        </a>
                 </li>
-                   <li>   
+                   <li>
+                        <a href="">   
                     <img src="./image/portfolio/optimiz/project_4.jpg" width="370" height="294" alt="Маркетинг">
                     <h2>Проект Prime</h2>
                     <p>Маркетинг</p>
+                        </a>
                 </li>
-                   <li>   
+                   <li>
+                        <a href="">   
                     <img src="./image/portfolio/optimiz/project_5.jpg" width="370" height="294" alt="Приложение">
                     <h2>Проект Boxes</h2>
                     <p>Приложение</p>
+                        </a>
                 </li>
-                   <li>   
+                   <li>
+                        <a href="">   
                     <img src="./image/portfolio/optimiz/project_6.jpg" width="370" height="294" alt="Веб-сайт">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
+                        </a>
                 </li>
-                   <li>   
+                   <li>
+                        <a href="">   
                     <img src="./image/portfolio/optimiz/project_7.jpg" width="370" height="294" alt="Дизайн">
                     <h2>Издание Limited Edition</h2>
                     <p>Дизайн</p>
+                        </a>
                 </li>
-                   <li>   
+                   <li>
+                        <a href="">   
                     <img src="./image/portfolio/optimiz/project_8.jpg" width="370" height="294" alt="Маркетинг">
                     <h2>Проект LAB</h2>
                     <p>Маркетинг</p>
+                        </a>
                 </li>
-                   <li>   
+                   <li>
+                        <a href="">   
                     <img src="./image/portfolio/optimiz/project_9.jpg" width="370" height="294" alt="Приложение">
                     <h2>Growing Business</h2>
                     <p>Приложение</p>
+                        </a>
                 </li>
                 </ul> 
             </section>
