--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css"/>
 </head>
@@ -14,9 +13,11 @@
     <header class="header">
         <a class="logo" lang="en" href=""><span class="blue-logo">Web</span>Studio</a>
         <nav class="site-nav list">
-            <a class="link" href="/index.html">Студия</a>
-            <a class="link" href="./portfolio.html">Портфолио</a>
-            <a class="link" href="">Контакты</a>
+            <ul>
+                <li><a class="link" href="/index.html">Студия</a></li>
+                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="">Контакты</a></li>
+            </ul>
         </nav>
         <ul class="contact-list">
             <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -101,12 +102,12 @@
     <!-- Подвал сайта -->
     <footer class="footer">
         <a class="logo" lang="en" href=""><span class="blue-logo">Web</span>Studio</a>
-        <address class="address">
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
         <address class="address-list">
-            <a class="link" href="mailto:info@example.com">info@example.com</a>
-            <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+            <ul>
+                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
         </address>
     </footer>
 </body>
