--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a class="logo" lang="en" href=""><span class="blue-logo">Web</span>Studio</a>
         <nav class="site-nav list">
             <ul>
-                <li><a class="link" href="/index.html">Студия</a></li>
+                <li><a class="link current" href="/index.html">Студия</a></li>
                 <li><a class="link" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
@@ -104,7 +104,7 @@
         <a class="logo" lang="en" href=""><span class="blue-logo">Web</span>Studio</a>
         <address class="address-list">
             <ul>
-                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="address">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
                 <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
