--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <nav class="site-nav list">
             <ul>
                 <li><a class="link" href="/index.html">Студия</a></li>
-                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
@@ -34,74 +34,74 @@
         <section class="section-portfolio">
             <h1 class="title">Портфолио</h1>
             <ul class="button-list">
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button class="btn" type="button">Все</button></li>
+                <li><button class="btn" type="button">Веб-сайты</button></li>
+                <li><button class="btn" type="button">Приложения</button></li>
+                <li><button class="btn" type="button">Дизайн</button></li>
+                <li><button class="btn" type="button">Маркетинг</button></li>
             </ul>
             <ul class="project-list">
                 <li>
                     <a href="">
                         <img src="./image/portfolio/optimiz/project_1.jpg" width="370" height="294" alt="Веб-сайт">
                         <h2 class="project-title">Технокряк</h2>
-                        <p class="project">Веб-сайт</p>
+                        <p class="project-type">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio/optimiz/project_2.jpg" width="370" height="294" alt="Дизайн">
                         <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="project">Дизайн</p>
+                        <p class="project-type">Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio/optimiz/project_3.jpg" width="370" height="294" alt="Приложение">
                         <h2 class="project-title">Ресторан Seafood</h2>
-                        <p class="project">Приложение</p>
+                        <p class="project-type">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio/optimiz/project_4.jpg" width="370" height="294" alt="Маркетинг">
                         <h2 class="project-title">Проект Prime</h2>
-                        <p class="project">Маркетинг</p>
+                        <p class="project-type">Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio/optimiz/project_5.jpg" width="370" height="294" alt="Приложение">
                         <h2 class="project-title">Проект Boxes</h2>
-                        <p class="project">Приложение</p>
+                        <p class="project-type">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio/optimiz/project_6.jpg" width="370" height="294" alt="Веб-сайт">
                         <h2 class="project-title">Inspiration has no Borders</h2>
-                        <p class="project">Веб-сайт</p>
+                        <p class="project-type">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio/optimiz/project_7.jpg" width="370" height="294" alt="Дизайн">
                         <h2 class="project-title">Издание Limited Edition</h2>
-                        <p class="project">Дизайн</p>
+                        <p class="project-type">Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio/optimiz/project_8.jpg" width="370" height="294" alt="Маркетинг">
                         <h2 class="project-title">Проект LAB</h2>
-                        <p class="project">Маркетинг</p>
+                        <p class="project-type">Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./image/portfolio/optimiz/project_9.jpg" width="370" height="294" alt="Приложение">
                         <h2 class="project-title">Growing Business</h2>
-                        <p class="project">Приложение</p>
+                        <p class="project-type">Приложение</p>
                     </a>
                 </li>
             </ul>
@@ -112,7 +112,7 @@
         <a class="logo" lang="en" href=""><span class="blue-logo">Web</span>Studio</a>
         <address class="address-list">
             <ul>
-                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
                 <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
