--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
         <section class="section">
             <h2 class="peculiarities-title">Особенности</h2>
                 <ul class="peculiarities-list">
-                    <li class="title">
-                        <h3>Внимание к деталям</h3>
+                    <li>
+                        <h3 class="title">Внимание к деталям</h3>
                         <p class="paragraphly">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="title">
-                        <h3>Пунктуальность</h3>
+                    <li>
+                        <h3 class="title">Пунктуальность</h3>
                         <p class="paragraphly">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="title">
-                        <h3>Планирование</h3>
+                    <li>
+                        <h3 class="title">Планирование</h3>
                         <p class="paragraphly">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="title">
-                        <h3>Современные технологии</h3>
+                    <li>
+                        <h3 class="title">Современные технологии</h3>
                         <p class="paragraphly">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
@@ -71,30 +71,30 @@
         <!-- Наша команда -->
         <section class="section">
             <h2 class="section-title">Наша команда</h2>
-            <ul>
+            <ul class="section-team">
                 <!-- Игорь Демьяненко Product Designer -->
                 <li>
                     <img src="./image/our_team/optimiz/product_designer.jpg" alt="product_designer" width="270">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h3 class="member">Игорь Демьяненко</h3>
+                    <p class="profesion" lang="en">Product Designer</p>
                 </li>
                 <!-- Ольга Репина Frontend Developer -->
                 <li>
                     <img src="./image/our_team/optimiz/frontend_developer.jpg" alt="frontend_developer" width="270">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="member">Ольга Репина</h3>
+                    <p class="profesion" lang="en">Frontend Developer</p>
                 </li>
                 <!-- Николай Тарасов Marketing -->
                 <li>
                     <img src="./image/our_team/optimiz/marketing.jpg" alt="marketing" width="270">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="member">Николай Тарасов</h3>
+                    <p class="profesion" lang="en">Marketing</p>
                 </li>
                 <!-- Михаил Ермаков UI Designer -->
                 <li>
                     <img src="./image/our_team/optimiz/ui_designer.jpg" alt="ui_designer" width="270">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h3 class="member">Михаил Ермаков</h3>
+                    <p class="profesion" lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
