Исправляет адрес ссылки

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <a class="logo" lang="en" href=""><span class="blue-logo">Web</span>Studio</a>
         <nav class="site-nav list">
             <ul>
-                <li><a class="link" href="/index.html">Студия</a></li>
+                <li><a class="link" href="./index.html">Студия</a></li>
                 <li><a class="link current" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
