--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a class="logo" lang="en" href=""><span class="blue-logo">Web</span>Studio</a>
         <nav class="site-nav list">
             <ul>
-                <li><a class="link current" href="/index.html">Студия</a></li>
+                <li><a class="link current" href="./index.html">Студия</a></li>
                 <li><a class="link" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
